# Gentle

./: .gitignore  .tool-versions  Makefile  README.md  docker-compose.yml  env.example
api/: .env.example  Dockerfile  README.md  alembic.ini  celery_app.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py
api/app/: main.py
api/app/core/: settings.py
api/app/db/: models.py  session.py
api/app/routers/: __init__.py  mood.py  public.py  secure.py  steps.py  tasks.py
api/app/schemas/: __init__.py  mood.py  steps.py  tasks.py
api/app/services/: ai.py
api/app/tasks/: celebrations.py
web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/celebrate/: page.tsx
web/app/(app)/decompose/: page.tsx
web/app/(app)/tasks/: page.tsx
web/app/(app)/tasks/[id]/: page.tsx
web/components/task/: ProgressBar.tsx  StateBadge.tsx
web/components/ui/: bubble-selector.tsx  select.tsx  slider.tsx
web/hooks/: useApi.ts  useAuthSession.ts  useCompleteStep.ts  useDeleteTask.ts  useTasks.ts  useTooBigStep.ts
web/providers/: query.tsx
web/public/: manifest.json
